# codex-devops-demo

./: AGENTS.md  Notebook.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: multi-step-workflow-demo  multi-step-workflow-demo.yml  pytest-pip.yml  pytest-uv.yml  pytest.yml  workflow-demo-cache-python-pip.yml  workflow-demo-cache-python-uv.yml  workflow-demo-dependent-jobs.yml  workflow-demo-env.yml  workflow-demo-environment-variables.yml  workflow-demo-multi-steps.yml  workflow-demo-python-uv.yml  workflow-demo-secrets-and-variables.yml  workflow-demo-uv-manual-cache.yml
src/codex_pr_demo/: __init__.py  math_util.py
tests/: test_math_util.py
