[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-pr-demo"
version = "0.1.0"
description = "Minimal Python project for codex-pr-demo."
requires-python = ">=3.10, <=3.12" # Require Python >3.9 (>=3.10) and <=3.12
dependencies = [
    "pytest>=8.3.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
